# fin-mcp

./: .env.example  README.md  client_test.py  pyproject.toml
chat_demo/: __init__.py  chat_agent.py  gradio_ui.py
fin_mcp/: __init__.py  server.py
fin_mcp/agents/: __init__.py  base_agent.py  parse10k_agent.py  risk_agent.py  supervisor_agent.py  tone_agent.py
fin_mcp/graph/: __init__.py  graph_diagram.md  langgraph_builder.py
fin_mcp/models/: __init__.py  state.py
fin_mcp/sec_tools/: __init__.py  sec_tools.py
fin_mcp/tools/: __init__.py  agent_tools.py  schemas.py  sec_tools.py
