[project]
name = "fin_mcp"
version = "0.1.0"
description = "An MCP server for gaining insight into real-time financial news streams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastmcp>=2.9.2",
    "gradio>=5.35.0",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "lxml>=6.0.0",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "requests>=2.32.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fin_mcp"]
